cpp/test/FreezeScript/dbmap/fail/02_old.ice
module Test
{

enum E { E1, E2, E3 };

struct S1
{
    float m1;
    long m2;
    string m3;
    E m4;
};

sequence<byte> Seq1;
dictionary<byte, byte> D1;

interface I {};

class C1 implements I
{
    byte c1m1;
    byte c1m2;
    byte c1m3;
    byte c1m4;
    byte c1m5;
    byte c1m6;
    byte c1m7;
    byte c1m8;
    byte c1m9;
    byte c1m10;
    byte c1m11;
    byte c1m12;
    byte c1m13;
    byte c1m14;
    byte c1m15;
    byte c1m16;
};

class C2 extends C1
{
    byte c2m1;
    byte c2m2;
    byte c2m3;
    byte c2m4;
    byte c2m5;
    byte c2m6;
    byte c2m7;
    byte c2m8;
    byte c2m9;
    byte c2m10;
    byte c2m11;
    byte c2m12;
    byte c2m13;
    byte c2m14;
    byte c2m15;
    byte c2m16;
};

struct S2
{
    byte m1;
    byte m2;
    byte m3;
    byte m4;
    byte m5;
    byte m6;
    byte m7;
    byte m8;
    byte m9;
    byte m10;
    byte m11;
    byte m12;
    byte m13;
    byte m14;
    byte m15;
    byte m16;
};

};
